...
    private let credit = HyperwalletReceipt.HyperwalletEntryType.credit.rawValue

    lazy var receiptTypeLabel: UILabel = {
        let label = UILabel(frame: .zero)
        label.font = Theme.Label.bodyFontMedium
        label.textColor = Theme.Label.color
        label.accessibilityIdentifier = "receiptTransactionTypeLabel"
        return label
    }()

    lazy var amountLabel: UILabel = {
        let label = UILabel(frame: .zero)
        label.font = Theme.Label.bodyFontMedium
        label.textAlignment = .right
        label.accessibilityIdentifier = "receiptTransactionAmountLabel"
        return label
    }()

    lazy var createdOnLabel: UILabel = {
        let label = UILabel(frame: .zero)
        label.font = Theme.Label.captionOne
        label.textColor = Theme.Label.subTitleColor
        label.accessibilityIdentifier = "receiptTransactionCreatedOnLabel"
        return label
    }()

    lazy var currencyLabel: UILabel = {
        let label = UILabel(frame: .zero)
        label.font = Theme.Label.captionOne
        label.textColor = Theme.Label.subTitleColor
        label.textAlignment = .right
        label.accessibilityIdentifier = "receiptTransactionCurrencyLabel"
        return label
    }()

    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
        super.init(style: .default, reuseIdentifier: reuseIdentifier)
        defaultInit()
...
