...
            case .paymentDetails: return "Payment Details"
            case .listTransferMethod: return "List Transfer Methods"
            case .selectTransferMethod: return "Select Transfer Method"
            case .addTransferMethod: return "Add Transfer Method"
            case .updateTransferMethod: return "Update Transfer Method"
            case .userReceipts: return "List User Receipts"
            case .prepaidCardReceipts: return "List Prepaid Card Receipts"
            case .allSourcesReceipts: return "List All Receipts"
            case .transferFunds: return "Transfer Funds"
            case .transferFundsSource: return "Transfer Funds Source"
            case .transferFundsPPC: return "Transfer Funds PPC"
            }
        }
...
